--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,5 @@
 {
+  "description": "Guarda y accede a todos tus enlaces de manera sencilla",
   "manifest_version": 3,
   "version": "1.1",
   "name": "Colibrí Marcador de Enlaces",
